# cpp-samples

./: .gitmodules  LICENSE
CUDA-examples/: access_per_activate.cu
OpenCL-examples/: .gitignore  README.md  meson.build
OpenCL-examples/include/CL/: cl2.hpp  cl2.hpp.prev
OpenCL-examples/include/png++/: error.hpp
OpenCL-examples/src/: base.hh  cl_wrap.hh  meson.build  mydiff  optional.hh  save_png.hh
OpenCL-examples/src/cl-info/: main.cc  meson.build
OpenCL-examples/src/cl-util/: compile.cc  compile.hh  get_gpu_context.cc  get_gpu_context.hh  info.cc  info.hh  log.cc  meson.build  set_args.hh  timing.cc  timing.hh
OpenCL-examples/src/kernels/: mandel.cl  meson.build
OpenCL-examples/src/mandelbrot/: .main.cc.swn  main.cc  meson.build
amgcl.greenfield/: CMakeLists.txt
amgcl.greenfield/src/: amgcl_block_matrices_test.cpp
amgcl.starter/: CMakeLists.txt  Makefile
amgcl.starter/data/: A_SIPG_2_test_problem_2_0_05_1.m.mtx  B_test.mtx
amgcl.starter/src/: amgcl_block_matrices_test.cpp  solver.cpp
arm64.cross.greenfield/: README.md  greenfield.cpp  meson.build
arm64.cross.greenfield/src/: greenfield.cpp
arm64.cross.starter/: README.md  cross_file.txt  cross_file_ndk.txt  meson.build
arm64.cross.starter/src/: greenfield.cpp
body_ax/: Makefile  README.md  body_ax.asy  fontoptions.tex
body_ax/data/: torus_trgl.dat.BIG
body_ax/golden/: gauss_legendre_print.golden
body_ax/src/: body_ax.cpp  body_ax_geo.cpp  body_ax_geo.hpp  body_ax_geo.tcc  body_ax_sdlp.cpp  body_ax_sdlp.tcc  body_ax_vel.tcc  elliptic_integral.cpp  elliptic_integral.hpp  elm_line.tcc  gauss_legendre.cpp  gauss_legendre.hpp  gauss_legendre.tcc  lgf_ax_fs.cpp  lgf_ax_fs.tcc  lin_alg_types.hpp  lvr_fs.cpp  lvr_fs.tcc  math_consts.hpp  parameters.hpp  program_options.hpp
c++new-features/: Makefile  README.md  check_atomic_shared_ptr.cpp  en.cpp  joining_thread.h  move_semantics.cpp  partial_specialization.cpp  producer_consumer.cpp  range.h  shared_mutex.cpp  sleep_for.cpp  spec.cpp  spinlock.cpp  strategy_pattern.cpp  tensor.cpp  timer_events.cpp
c++new-features/modules/: client_template.cpp  math_module_template.cpp  runme
chebyshev_pseudospectral/: CMakeLists.txt  DEBUG_NOTES.md  Doxyfile  Makefile  PSM.bib  meson.build  mk.sh
chebyshev_pseudospectral/src/: .ccls  BartelsStewart.cpp  BartelsStewart.hpp  ChebyshevDifferentiate.cpp  ChebyshevDifferentiate.hpp  FastCosineTransform.cpp  FastCosineTransform.hpp  PoissonProblem.cpp  PoissonProblem.hpp  bs2.cpp  bs2.hpp  cft.cpp  main.cpp  math.hpp  poisson_solver.cpp  unit_tests.cpp
flex+bison/idia/: errmsg.h  geom.cpp  geom.h  get_opt.h  idia-parser.yy  idia-scanner.ll
hexembed/: hexembed.cpp  hexembed_base.cpp  hexembed_fs.cpp  hexembed_mmap.cpp  hexembed_mmap_savem.cpp
lief_project/: CMakeLists.txt
lief_project/src/: CMakeLists.txt  main.cpp
lru/: Makefile  bitops.cpp  bitops.hpp  cache.cpp  cache.hpp  logger.hpp  opts.hpp
misc/: booby_trap.cpp  custom_sep.cpp
misc/boost-fs/: Makefile  boost_fs_ls.cpp
misc/cgal_samples/: CMakeLists.txt  cgal_polyhedron_volume_test.cpp  synthetic_seam_collinear_test.cpp
misc/coding_lessons/: bin_gap.cpp
misc/curlcpp/: Makefile  curlpp_download_example.cpp  example04.cpp
misc/jsoncpp/: Makefile  test.json  test_json.cpp
misc/lambda_closure/: frame_closure.cpp
misc/network_status/: Makefile  network_status.cpp
misc/xmlcpp/: Makefile  http_head.xml  http_head_doesnt_parse_with_pugixml.xml  load_xml_file.cpp  maven.xml  property_tree.cpp
misc/yamlcpp/: Makefile  app.yaml  test-yaml.cpp
oneapi/: histo.cpp  histogram.cu  histogram.dp.cpp  histogram_dpcpp.cpp  simple-sycl-app.cpp  simple2.cpp
parallel_ds_and_algos/parallel_ds/: relaxed.cpp  stack_lock_free.hpp  test_bench.cpp
parallel_ds_and_algos/spinlock/: spinlock_test2.cpp
rtp/: README.md  SimpleRobotInterface.h  rtp_client.cpp  rtp_server.cpp
simple-vm/: Makefile  draw.pl  get_opt.hpp  logger.hpp  main_driver.cpp  overview.txt  test_all  vm.cpp  vm.hpp
spinlock/: spinlock_test.cpp
sunrise/: CMakeLists.txt
sunrise/src/: sunrise_driver.cpp
tini_trimesh/: CMakeLists.txt  spec.cpp  tests.cpp  tiny_trimesh.h
